# gecko-party-random-minter

./: Cargo.toml
artifacts/: checksums.txt  gecko_random_minter.wasm
src/: contract.rs  error.rs  msg.rs  state.rs
