[package]
name = "gecko-random-minter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.1.1"
cosmwasm-std    = "1.1.1"
cw-storage-plus = "1.1.0"
cw-utils        = "1.0.0"
cw2 = "1.1.0"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
cw721 = { version = "0.18.0" }
cw721-base = { version = "0.18.0", features = ["library"] }
thiserror = "1.0.58"
sha2 = "0.10.8"
